package edu.tec.ic6821.blog.sync;

public interface SyncDataService {
    SyncDataResult sync();
}
